--- a/views/tools.html
+++ b/views/tools.html
@@ -5,8 +5,8 @@
     padding: 10px;
   }
   
-  li.newbug a{
-    
+  li.newbug {
+    text-align: center;
   }
   
   ul.bugtools li{
@@ -15,11 +15,17 @@
 </style>
         
 <ul class="list-unstyled bugtools">
-  <li class="newbug"><a href="/bug/create?page=<%=curpageindex%>">新建bug</a></li>
+  <li class="newbug">
+    <a href="/bug/create?page=<%=curpageindex%>" class="btn btn-primary " style="width:150px" role="button">我发现问题</a>
+  </li>
+</ul>
+
+<ul class="list-unstyled bugtools">
   <li><a href="/">指派给我 <span class="badge"><%=3%></span></a></li>
   <li><a href="/">我创建的</a></li>
-  <li><a href="/">我要激活</a></li>
+  <li><a href="/">邮件有我的</a></li>
 </ul>
+
 
 
 
