--- a/views/login.html
+++ b/views/login.html
@@ -61,7 +61,7 @@
     <div class="form-group has-success">
       <label for="inputEmail3" class="col-sm-2 control-label">姓名</label>
       <div class="col-sm-8">
-        <input type="text" class="form-control" id="myname" name="myname" placeholder="你的大名" value="<%=myname%>">
+        <input type="text" class="form-control" id="myname" name="myname" placeholder="你的大名" >
         <span id="helpBlock" class="help-block">你的真实姓名.</span>
       </div> 
     </div>
