--- a/views/login.html
+++ b/views/login.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
 
@@ -76,6 +76,7 @@
     <div class="form-group">
     <div class="col-sm-offset-2   col-sm-10">
       <button type="button" class="btn btn-success" id="dobtn"><i class="fa fa-check fa-fw"></i>登录</button>
+      <span class="msgtxt"></span>
     </div>
     </div>
     
@@ -88,8 +89,8 @@
   
 </body>
   
-<script src="lib/jquery-1.12.2.min.js"></script>
-<script src="lib/bootstrap/js/bootstrap.min.js"></script>
+<script src="/lib/jquery-1.12.2.min.js"></script>
+<script src="/lib/bootstrap/js/bootstrap.min.js"></script>
 
   
 <script>
@@ -97,13 +98,17 @@
   
   $('#dobtn').on('click',function(){
     var name = $('#myname').val();
+    var passwd = $('#mypw').val(); 
     if(!name){
-      alert('请输入你的大名。');
+      $('span.msgtxt').text('请输入你的大名。');
       $('#myname').closest('div.form-group') .removeClass('has-success').addClass('has-error');
+    }
+    else if(!passwd){
+       $('span.msgtxt').text('无密码。');
+      $('#mypw').closest('div.form-group') .removeClass('has-success').addClass('has-error');
     }
     else{
         $('form').submit();
-      //window.location ='/main';
     };
   });
   
