增加bug编辑功能。
Signed-off-by: 龙仕云 <mrlong.com@gmail.com>

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,3 +8,11 @@ span.msgtxt{
   margin-left: 10px;
   color: red;
 }
+
+div.msgbox{
+  padding-left: 0px;
+}
+
+div.msgbox .alert{
+  border-radius: 0px;
+}
