--- a/views/header.html
+++ b/views/header.html
@@ -17,9 +17,8 @@
       <div class="navbar-header">
         <a class="navbar-brand" href="#">擎洲开发管理系统</a>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="javascript:;">bug管理</a></li>
-<!--         <li><a href="#" id='opencomfire'>弹窗口</a></li>-->
-             <li><a href="#" id="opendialog" data-toggle="modal" data-target="#myid1">帮助说明</a></li>
+            <li class="active" id="bug"><a href="javascript:;">BUG管理</a></li>
+            <li><a href="#" id="svn" >SVN日志</a></li>
         </ul>
         
    
@@ -33,4 +32,13 @@
       </div>
     </div>
     </nav>
+    
+    <% if( typeof msgbox !='undefined' && msgbox[0] && msgbox[0].success == false ) {%>
+    <div class="container msgbox">
+      <div class="alert alert-danger alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <%=msgbox[0].msg%>
+      </div>
+    </div>
+    <%}%>
 <!-- header.html -->
