--- a/views/login.html
+++ b/views/login.html
@@ -29,11 +29,13 @@
     width: 100px;
     background-color: aquamarine;
   }
+  
   div.loginimg{
-    padding: 20px;
+    padding: 100px 50px 30px 50px;
     padding-right: 100px;
     text-align: center;
     vertical-align: middle;
+    color: #a2640f;
     
   }
   div.loginimg img{
@@ -54,35 +56,32 @@
   <div class="page-header appname"><h1>擎洲开发管理系统</h1></div>
   <div class="row">
     <div class="col-sm-6 loginimg">
-      <img src="">
+      <p class="lead"><%=today%></p>
     </div>
     <div class="col-sm-6">
-  <form class="form-horizontal loginform" method="post" action="/login">
-    <div class="form-group has-success">
-      <label for="inputEmail3" class="col-sm-2 control-label">姓名</label>
-      <div class="col-sm-8">
-        <input type="text" class="form-control" id="myname" name="myname" placeholder="你的大名" >
-        <span id="helpBlock" class="help-block">你的真实姓名.</span>
-      </div> 
-    </div>
-        
-    <div class="form-group">
-      <label for="inputEmail3" class="col-sm-2 control-label">密码</label>
-      <div class="col-sm-8">
-        <input type="password" class="form-control" id="mypw" name="mypasswd" placeholder="你的密码">
-      </div>
-    </div>
-    
-    <div class="form-group">
-    <div class="col-sm-offset-2   col-sm-10">
-      <button type="button" class="btn btn-success" id="dobtn"><i class="fa fa-check fa-fw"></i>登录</button>
-      <span class="msgtxt"></span>
-    </div>
-    </div>
-    
-    
-  
-  </form>
+      <form class="form-horizontal loginform" method="post" action="/login">
+        <div class="form-group has-success">
+          <label for="inputEmail3" class="col-sm-2 control-label">姓名</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="myname" name="myname" placeholder="你的大名" >
+            <span id="helpBlock" class="help-block">你的真实姓名.</span>
+          </div> 
+        </div>
+
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">密码</label>
+          <div class="col-sm-8">
+            <input type="password" class="form-control" id="mypw" name="mypasswd" placeholder="你的密码">
+          </div>
+        </div>
+
+        <div class="form-group">
+        <div class="col-sm-offset-2   col-sm-10">
+          <button type="button" class="btn btn-success" id="dobtn"><i class="fa fa-check fa-fw"></i>登录</button>
+          <span class="msgtxt"><%=msgbox[0] && msgbox[0].msg%></span>
+        </div>
+        </div>
+      </form>
   </div>
     
 </div>
