--- a/views/header.html
+++ b/views/header.html
@@ -27,7 +27,7 @@
         
         <ul class="nav navbar-nav ">
           <li><a>欢迎，<%=curuser.name%></a></li>
-          <li><a href="#"><i class="fa fa-sign-out fa-fw"></i>退出</a></li>
+          <li><a href="/login/logout"><i class="fa fa-sign-out fa-fw"></i>退出</a></li>
         </ul>
       </div>
     </div>
