--- a/views/main.html
+++ b/views/main.html
@@ -72,7 +72,7 @@
 seajs.use(['pagerbar','dialog'],function(pagerbar,dialog){
   
   $(document).ready(function(){
-    
+    ChangeMenu('bug');
     pagerbar.init('.pagerbar',
                   <%=rowcount%>,
                   <%=curpageindex%>,
