--- a/views/header.html
+++ b/views/header.html
@@ -10,15 +10,24 @@
 
     <link href="/css/style.css" rel="stylesheet">
 </head>
+   
+<script>
+  
+  function ChangeMenu(id){
+    $('div.mainmenu').find('li.active').removeClass('active');
+    $('div.mainmenu').find('#'+id).addClass('active');
+  };
+  
+</script>
     
 <body>
     <nav class="navbar navbar-fixed-top navbar-inverse">
     <div class="container">
-      <div class="navbar-header">
+      <div class="navbar-header mainmenu">
         <a class="navbar-brand" href="#">擎洲开发管理系统</a>
         <ul class="nav navbar-nav">
-            <li class="active" id="bug"><a href="javascript:;">BUG管理</a></li>
-            <li><a href="#" id="svn" >SVN日志</a></li>
+            <li class="active" id="bug"><a href="/main">BUG管理</a></li>
+            <li id="svn"><a href="/svn"  >SVN日志</a></li>
         </ul>
         
    
