文字写错了。
Signed-off-by: 龙仕云 <mrlong.com@gmail.com>

--- a/views/buginfo.html
+++ b/views/buginfo.html
@@ -122,7 +122,7 @@
             <span class="msgtxt"></span>
             <div class="pull-right">
               <button type="button" id="closebtn" class="btn btn-success" style="width:100px">我解决了</button>
-              <button type="button" id="openbtn" class="btn btn-danger" style="width:100px">激动问题</button>
+              <button type="button" id="openbtn" class="btn btn-danger" style="width:100px">激活问题</button>
             </div>
           </div>
       </div>
