--- a/views/main.html
+++ b/views/main.html
@@ -30,7 +30,7 @@
 <div class="container">
 
   <div class="row">
-    <div class="col-md-9 bugcontent">
+    <div class="col-lg-9 col-md-9 bugcontent">
       <table class="table table-hover bugtable">
         <tr class="header">
           <th>#</th>
