增加ip申请功能。
Signed-off-by: 龙仕云 <mrlong.com@gmail.com>

--- a/views/header.html
+++ b/views/header.html
@@ -28,6 +28,7 @@
         <ul class="nav navbar-nav">
             <li class="active" id="bug"><a href="/main">BUG管理</a></li>
             <li id="svn"><a href="/svn"  >SVN日志</a></li>
+            <li id="svn"><a href="/ipaddress" target="_blank"  >IP申请</a></li>
         </ul>
         
    
