引用lib 的路径有问题。
Signed-off-by: 龙仕云 <mrlong.com@gmail.com>

--- a/views/footer.html
+++ b/views/footer.html
@@ -1,4 +1,10 @@
+<script src="/lib/jquery-1.12.2.min.js"></script>
+<script src="/lib/bootstrap/js/bootstrap.min.js"></script>
+<script src="/lib/sea.js"></script>
+<script src="/lib/sea-config.js"></script>
+
 </body>
+
 <style>
   div.gitbug{
     padding: 20px;
