--- a/views/ipaddress.html
+++ b/views/ipaddress.html
@@ -5,6 +5,8 @@
   <title>Document</title>
   <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <script src="/lib/jquery-1.12.2.min.js"></script>
+  <script src="/lib/bootstrap/js/bootstrap.min.js"></script> 
     
 </head>
 
